[gd_scene load_steps=14 format=3 uid="uid://cu3tnip4q7f15"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_2yiyo"]
[ext_resource type="PackedScene" uid="uid://bpih6vdn5w3ii" path="res://Assets/Character/PlayerCharacter.tscn" id="2_0sc41"]
[ext_resource type="PackedScene" uid="uid://7euclupuhww7" path="res://Assets/punches/glove.tscn" id="2_5t7yh"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rn8xx"]
custom_solver_bias = 0.037

[sub_resource type="SphereMesh" id="SphereMesh_75kub"]

[sub_resource type="BoxShape3D" id="BoxShape3D_emmwe"]
size = Vector3(0.8, 0.8, 1.5)

[sub_resource type="SphereMesh" id="SphereMesh_5psvk"]

[sub_resource type="BoxShape3D" id="BoxShape3D_2ampk"]
size = Vector3(0.8, 0.8, 1.5)

[sub_resource type="Animation" id="Animation_n6oe2"]
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Punch/leftPunch:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 0.7, 0.9, 1.1, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.698, 1.1, -0.5), Vector3(-0.57, 1.1, -0.916), Vector3(-0.479, 1.1, -1.218), Vector3(-0.57, 1.1, -0.916), Vector3(-0.698, 1.1, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Neck/Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.50449, -0.314812)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Neck/Camera3D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_wel16"]
resource_name = "SlenderCatch"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Neck/Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 1.50449, -0.314812), Vector3(-2.99139, 2.53936, -2.64704), Vector3(0, 3.57422, -4.97927)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Neck/Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.181602, -3.14159, -1.6053e-08)]
}

[sub_resource type="Animation" id="Animation_dvk8k"]
resource_name = "leftPunch"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Punch/leftPunch:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.12, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.698, 1.1, -0.5), Vector3(-0.3, 1.2, -2), Vector3(-0.698, 1.1, -0.5)]
}

[sub_resource type="Animation" id="Animation_xs6pf"]
resource_name = "rightPunch"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Punch/rightPunch:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.12, 0.17, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.698174, 1.1, -0.5), Vector3(0.698174, 1.1, -0.892623), Vector3(0.56, 1.1, -2), Vector3(0.698174, 1.1, -0.892623), Vector3(0.698174, 1.1, -0.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l1jpu"]
_data = {
"RESET": SubResource("Animation_n6oe2"),
"SlenderCatch": SubResource("Animation_wel16"),
"leftPunch": SubResource("Animation_dvk8k"),
"rightPunch": SubResource("Animation_xs6pf")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_2yiyo")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.960083, 0)
shape = SubResource("CapsuleShape3D_rn8xx")

[node name="Neck" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Neck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.50449, -0.314812)
current = true

[node name="Punch" type="Node3D" parent="."]
visible = false

[node name="rightPunch" type="Node3D" parent="Punch"]
transform = Transform3D(0.592, 0, 0, 0, 0.592, 0, 0, 0, 0.592, 0.698174, 1.1, -0.5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Punch/rightPunch"]
visible = false
mesh = SubResource("SphereMesh_75kub")

[node name="RightHit" type="Area3D" parent="Punch/rightPunch"]
transform = Transform3D(1.68919, 0, 0, 0, 1.68919, 0, 0, 0, 1.68919, 0, 0, 0)
collision_layer = 2
collision_mask = 2

[node name="RightCollision" type="CollisionShape3D" parent="Punch/rightPunch/RightHit"]
shape = SubResource("BoxShape3D_emmwe")
disabled = true

[node name="Glove" parent="Punch/rightPunch" instance=ExtResource("2_5t7yh")]
transform = Transform3D(-0.00984807, -0.00173648, -4.30473e-10, -4.37114e-10, -1.91069e-17, 0.01, 0.00173648, -0.00984808, 7.5904e-11, 0, 0, 0.434129)

[node name="leftPunch" type="Node3D" parent="Punch"]
transform = Transform3D(0.592, 0, 0, 0, 0.592, 0, 0, 0, 0.592, -0.698, 1.1, -0.5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Punch/leftPunch"]
visible = false
mesh = SubResource("SphereMesh_5psvk")

[node name="LeftHit" type="Area3D" parent="Punch/leftPunch"]
transform = Transform3D(1.68919, 0, 0, 0, 1.68919, 0, 0, 0, 1.68919, 0, 0, 0)
collision_layer = 2
collision_mask = 2

[node name="LeftCollision" type="CollisionShape3D" parent="Punch/leftPunch/LeftHit"]
shape = SubResource("BoxShape3D_2ampk")
disabled = true

[node name="Glove" parent="Punch/leftPunch" instance=ExtResource("2_5t7yh")]
transform = Transform3D(0.00984808, 0.00173648, 7.5904e-11, 0, -4.37114e-10, 0.01, 0.00173648, -0.00984808, -4.30473e-10, 0, 0, 0.434129)

[node name="punchAnim" type="AnimationPlayer" parent="Punch"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_l1jpu")
}

[node name="basicCharacter2" parent="." instance=ExtResource("2_0sc41")]
transform = Transform3D(-0.1, 0, -8.74228e-09, 0, 0.1, 0, 8.74228e-09, 0, -0.1, 0, 0.102966, 0.150333)

[connection signal="area_entered" from="Punch/rightPunch/RightHit" to="." method="hit_tuc"]
[connection signal="area_entered" from="Punch/leftPunch/LeftHit" to="." method="hit_tuc"]
